# lonely-git-cleaner

./: .babelrc  .clinerules  .codecov.yml  .coverage  .dockerignore  .gitignore  .gitlint  .markdownlint.json  .pre-commit-config.yaml  BRANCHING.md  Dockerfile.test  README.md  codecov.yml  hello.py  package-lock.json  package.json  pyproject.toml  test-all.sh
.github/: CODEOWNERS  release.yml
.github/hooks/: check_branch.py  check_main.py
.github/workflows/: branch-protection.yml  release.yml  test.yml  version.yml
docs/: testing.md
scripts/: install-dev.sh  install.sh
src/arborist/: branch_ops.py  cli.py  commands.py  config.py  errors.py  exceptions.py  git.py
src/arborist.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/arborist/git/: __init__.py  branch_cleanup.py  branch_operations.py  branch_status.py  common.py  repo.py  worktree.py
src/git_cleanup/: __init__.py  cli.py  config.py  git.py
tests/: conftest.py  git-cleanup.test.js  git_test_env.py  install.test.js  test_branch_cleanup.py  test_branch_cleanup_edge_cases.py  test_branch_operations.py  test_branch_status.py  test_cli.py  test_cli_errors.py  test_common.py  test_config.py  test_format.py  test_git.py  test_git_integration.py  test_integration.py  test_repo.py  test_worktree.py
