[project]
name = "arborist"
version = "0.1.0"
description = "Clean up git branches that are gone or merged"
authors = [
    { name = "Ismar Slomic", email = "ismar@slomic.no" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.6.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "PL",  # pylint
    "N",   # pep8-naming
    "D",   # pydocstyle
    "COM", # flake8-commas
]
ignore = ["COM812"]  # Ignore trailing comma rule that conflicts with formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
